# mediarite-qt

./: CMakeLists.txt  build_me.bat  igcryptor.doxyfile  igcryptor.md  igcryptorConfig.h.in  media-rite.pro
gitroot/: build_me.bat  media-rite.pri  media-rite.pro  media-rite.qrc
gitroot/source/: media-rite.cpp  playthrough.cpp  playthrough.h  timersettingswidget.cpp  timersettingswidget.h  timersettingswidget.ui  videorecorder.cpp  videorecorder.h  videorecorder.ui
include/: igcryptor.h
source/: constants.h  igcryptor.cpp  main.cpp  videorecorder.cpp  videorecorder.h  videorecorder.ui
